<resources>
    <string name="app_name">Fridge</string>

    <string name="fridge_app">RFID Fridge</string>
    <string name="action_settings">Settings</string>
    <string name="user_name_view">User name:</string>
    <string name="user_name_text">Please enter your name</string>
    <string name="password_view">Password:</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="title_activity_display_login">Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_display_register">Register</string>
    <string name="register_name_view">User Name:</string>
    <string name="register_password_view">Password:</string>
    <string name="register_group_id_view">Group id:</string>
    <string name="new_user_register_button">Register</string>
    <string name="register_title">Register Fridge for easy life!</string>
</resources>
