<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.fridge.DisplayRegisterActivity">

    <TextView android:text="@string/register_name_view" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_name_view"
        android:textColor="#ff020202"
        android:textSize="20dip"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="0dp" />

    <TextView
        android:text="@string/register_group_id_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_group_id_view"
        android:textColor="#ff020202"
        android:textSize="20dip"
        android:layout_marginTop="-165dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="-55dp" />

    <TextView
        android:text="@string/register_password_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_password_view"
        android:textColor="#ff020202"
        android:textSize="20dip"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="-75dp"
        android:layout_marginTop="-205dp" />

    <EditText
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:id="@+id/register_name_text"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="-250dp"
        android:layout_marginLeft="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user_register_button"
        android:id="@+id/new_user_register_button"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="-80dp"
        android:layout_marginTop="-100dp" />

    <EditText
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:id="@+id/register_group_id_text"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:layout_marginLeft="-250dp"
        android:layout_marginTop="-170dp" />

    <EditText
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/register_password_text"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:layout_marginTop="-210dp"
        android:layout_marginLeft="-270dp" />

</LinearLayout>
